# http-server

./: .gitignore  CMakeLists.txt  README.md
deploy/: nginx-lb-3.conf  nginx-lb-8.conf  nginx-lb-check-4.conf  nginx-lb-check-8.conf  nginx-lb.conf
docs/: HTTP-SERVER.md
scripts/: bench_3wrk_cluster.sh  bench_all_compare.sh  bench_nginx_8.sh  bench_run_all.sh  lb_3clients.sh  lb_cpu_check.sh  lb_failover_demo.sh  lb_reuseport.sh  lb_scheme0.sh
src/: html_parser.cpp  html_parser.h  http_server.cpp  http_server.h  main.cpp
tests/: test_html_parser.cpp  test_html_www_pages.cpp  test_http_server.cpp  test_http_server_crash.cpp  test_http_server_sticky.cpp  test_http_server_stress.cpp
www/: about.html  another_index.html  data.txt  index.html  page_005.html  page_01.html  page_02.html  page_03.html  page_04.html  page_05.html  page_06.html  page_07.html  page_08.html  page_09.html  page_10.html  script.js  style.css
